--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   yandex_mapkit: ^3.2.0
   geolocator: ^9.0.2
   equatable: ^2.0.5
+  shared_preferences: ^2.2.3
+  http: ^1.2.1
 
 
 dev_dependencies:
