--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,10 @@ dependencies:
   yandex_mapkit: ^3.2.0
   geolocator: ^9.0.2
   equatable: ^2.0.5
-  shared_preferences: ^2.2.3
-  http: ^1.2.1
+  http: ^0.13.3
+  http_interceptor: ^1.0.2
+  logger: ^1.1.0
+  shared_preferences: ^2.2.2
 
 
 dev_dependencies:
